--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
         <a class="navbar-brand " href="#">Kartendeck</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -55,7 +55,7 @@
                         <p>“Nada contiene este dibujo, nada representa, no dispone
                             de coordenadas, no explica volúmenes ni profundidad,
                             no se refiere a nada que hayamos visto o imaginado...
-                            ...un puntodonde se ha parado el artista para tomar aliento en la
+                            ...un punto donde se ha parado el artista para tomar aliento en la
                             búsqueda de su problema.”
                             <br>Leo Steinberg.</p>
                     </div>
@@ -88,62 +88,48 @@
 
     <section>
         <div class="jumbotron">
-            <h1 class="display-4">Hello, world!</h1>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention
-                to featured content or information.</p>
+            <h1 class="display-4">Hola!</h1>
+            <p class="lead">Somos un equipo creativo capaz de convertir tus ideas en realidad</p>
             <hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            <p>Diseño, modelado y texturizado 3D, creación e integración en motores de Videojuego y más</p>
+            <a class="btn btn-primary btn-lg" href="#" role="button">conócenos</a>
         </div>
     </section>
 
 
-    <section>
+    <section class="cards-redondas">
         <div class="container marketing">
-
-            <!-- Three columns of text below the carousel -->
             <div class="row">
                 <div class="col-lg-4">
-                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                        preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777"
-                            dy=".3em">140x140</text>
-                    </svg>
-
-                    <h2>Heading</h2>
-                    <p>Some representative placeholder content for the three columns of text below the carousel. This is
-                        the first column.</p>
-                    <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+                    <img src="/assets/img/1.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140"
+                        role="img" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em"></text>
+                    </img>
+                    <h2>Arte Abstracto</h2>
+                    <p> ...un punto donde se ha parado el artista para tomar aliento en la
+                        búsqueda de su problema.</p>
+                    <p><a class="btn btn-secondary" href="#">más &raquo;</a></p>
                 </div><!-- /.col-lg-4 -->
                 <div class="col-lg-4">
-                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                        preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777"
-                            dy=".3em">140x140</text>
-                    </svg>
-
-                    <h2>Heading</h2>
-                    <p>Another exciting bit of representative placeholder content. This time, we've moved on to the
-                        second column.</p>
-                    <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+                    <img src="/assets/img/FunkoRO3.png" class="bd-placeholder-img rounded-circle" width="140" height="140"
+                        role="img" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em"></text>
+                    </img>
+                    <h2>Diseño 3D</h2>
+                    <p> Modelado, animación y texturizado de elementos 3D</p>
+                    <p><a class="btn btn-secondary" href="#">más &raquo;</a></p>
                 </div><!-- /.col-lg-4 -->
                 <div class="col-lg-4">
-                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                        preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777"
-                            dy=".3em">140x140</text>
-                    </svg>
-
-                    <h2>Heading</h2>
-                    <p>And lastly this, the third column of representative placeholder content.</p>
-                    <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-                
+                    <img src="/assets/img/mario_voxel9.png" class="bd-placeholder-img rounded-circle" width="140" height="140"
+                        role="img" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em"></text>
+                    </img>
+                    <h2>Integración en motores de Videojuegos</h2>
+                    <p> Unity & Unreal Engine</p>
+                    <p><a class="btn btn-secondary" href="#">más &raquo;</a></p>
                 </div><!-- /.col-lg-4 -->
             </div><!-- /.row -->
 
@@ -152,7 +138,7 @@
                 <br>
                 <div style="text-align:center;"> <a class="typeform-share button"
                         href="https://form.typeform.com/to/NobzNMhD?typeform-medium=embed-snippet" data-mode="popup"
-                        style="display:inline-block;text-decoration:none;background-color:#2362F3;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:18px;line-height:45px;text-align:center;margin:0;height:45px;padding:0px 30px;border-radius:4px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;"
+                        style="display:inline-block;text-decoration:none;background-color:#2362F3;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:15px;line-height:37.5px;text-align:center;margin:0;height:37.5px;padding:0px 25px;border-radius:7px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;"
                         data-size="70" target="_blank">¡Contáctanos! </a> </div>
                 <script>
                     (function () {
@@ -173,25 +159,23 @@
                 </script>
             </section>
 
-            <!-- START THE FEATURETTES -->
+            <!-- PRESENTACION PORTAFOLIO -->
 
             <hr class="featurette-divider">
 
             <div class="row featurette">
                 <div class="col-md-7">
-                    <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your
-                            mind.</span></h2>
-                    <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting
-                        prose here.</p>
+                    <h2 class="featurette-heading">MAQUETA MUNDO MARIO BROS<span class="text-muted"> ~ ZETI 64</span></h2>
+                    <p class="lead">Realización de maquieta Mario Bros en un mundo creado 100% en base a instrucciones del cliente. Un joven de 11 años. Convertimos tus ideas en realidad </p>
                 </div>
                 <div class="col-md-5">
-                    <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                        height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
+                    <img src="assets/img/mario_voxel9.png" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
+                        height="500"  role="img" aria-label="Placeholder: 500x500"
                         preserveAspectRatio="xMidYMid slice" focusable="false">
                         <title>Placeholder</title>
                         <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa"
-                            dy=".3em">500x500</text>
-                    </svg>
+                            dy=".3em">zeti for unity</text>
+                </img>
 
                 </div>
             </div>
@@ -200,19 +184,17 @@
 
             <div class="row featurette">
                 <div class="col-md-7 order-md-2">
-                    <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for
-                            yourself.</span></h2>
-                    <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of
-                        how this layout would work with some actual real-world content in place.</p>
+                    <h2 class="featurette-heading">Departamento 203<span class="text-muted">~ Antes de comprar, debía decorar</span></h2>
+                    <p class="lead">Modelo de departamento 3D para inicio de decoración en departamentos piloto. Proyección de tamaños y assets para decoración de interiores</p>
                 </div>
                 <div class="col-md-5 order-md-1">
-                    <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                        height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
+                    <img src="/assets/img/imagen (1).jpg " class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
+                        height="500" role="img" aria-label="Placeholder: 500x500"
                         preserveAspectRatio="xMidYMid slice" focusable="false">
                         <title>Placeholder</title>
                         <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa"
-                            dy=".3em">500x500</text>
-                    </svg>
+                            dy=".3em">El clan del 203</text>
+                </img>
 
                 </div>
             </div>
@@ -221,19 +203,17 @@
 
             <div class="row featurette">
                 <div class="col-md-7">
-                    <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-                    <p class="lead">And yes, this is the last block of representative placeholder content. Again, not
-                        really intended to be actually read, simply here to give you a better view of what this would
-                        look like with some actual content. Your content.</p>
+                    <h2 class="featurette-heading"> Mundo Pop ~ <span class="text-muted">Ro para Funko</span></h2>
+                    <p class="lead">Diseño 3D de Ro versión Funko para impresión. Modelo procesado e impreso exitosamente. Todos podemos ser un funko</p>
                 </div>
                 <div class="col-md-5">
-                    <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                        height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
+                    <img src="/assets/img/FunkoRO3.png" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
+                        height="500" role="img" aria-label="Placeholder: 500x500"
                         preserveAspectRatio="xMidYMid slice" focusable="false">
                         <title>Placeholder</title>
                         <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa"
-                            dy=".3em">500x500</text>
-                    </svg>
+                            dy=".3em">Funko Ro</text>
+                </img>
 
                 </div>
             </div>
@@ -249,7 +229,7 @@
 
     <footer class="container">
         <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017-2021 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; Kartendeck ~ Un proyecto zetistico &middot; <a href="#">No es privado, es público</a> &middot; <a href="#">No tenemos términos</a></p>
     </footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
