--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 
     <title>Kartendeck</title>
@@ -52,7 +53,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/assets/img/1.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/img/1.jpg" class="d-block w-100" alt="imagen_1">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Arte Abstracto</h5>
                         <p>“Nada contiene este dibujo, nada representa, no dispone
@@ -64,14 +65,14 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/assets/img/2.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/img/2.jpg" class="d-block w-100" alt="imagen_2">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Modelado, animación y texturizado de elementos 3D</h5>
                         <p>Creamos objetos para ser utilizados ya sea en videojuegos o para su impresión en 3D</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/assets/img/3.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/img/3.jpg" class="d-block w-100" alt="imagen_3">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Convertimos tu idea en código</h5>
                         <p>Representamos matemáticamente cualquier modelo tridimensional. No hay límites.</p>
@@ -105,7 +106,7 @@
         <div class="container marketing">
             <div class="row">
                 <div class="col-lg-4">
-                    <img src="/assets/img/1.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140"
+                    <img src="assets/img/fondo.jpg_1.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140"
                         role="img" preserveAspectRatio="xMidYMid slice" focusable="false">
                     <title>Placeholder</title>
                     <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em"></text>
@@ -119,7 +120,7 @@
                             title="visita nuestro Insta">más &raquo;</a></p>
                 </div><!-- /.col-lg-4 -->
                 <div class="col-lg-4">
-                    <img src="/assets/img/FunkoRO3.png" class="bd-placeholder-img rounded-circle" width="140"
+                    <img src="assets/img/FunkoRO3.png" class="bd-placeholder-img rounded-circle" width="140"
                         height="140" role="img" preserveAspectRatio="xMidYMid slice" focusable="false">
                     <title>Placeholder</title>
                     <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em"></text>
@@ -133,7 +134,7 @@
                             title="visita nuestro Insta">más &raquo;</a></p>
                 </div><!-- /.col-lg-4 -->
                 <div class="col-lg-4">
-                    <img src="/assets/img/mario_voxel9.png" class="bd-placeholder-img rounded-circle" width="140"
+                    <img src="assets/img/mario_voxel9.png" class="bd-placeholder-img rounded-circle" width="140"
                         height="140" role="img" preserveAspectRatio="xMidYMid slice" focusable="false">
                     <title>Placeholder</title>
                     <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em"></text>
@@ -180,7 +181,7 @@
                 <div class="row featurette">
                     <div class="col-md-7">
                         <h2 class="featurette-heading">MAQUETA MUNDO MARIO BROS<span class="text-muted"> ~ ZETI
-                                64</span></h2>
+                                64 ~</span></h2>
                         <p class="lead">Realización de maquieta Mario Bros en un mundo creado 100% en base a
                             instrucciones del cliente. Un joven de 11 años. Convertimos tus ideas en realidad </p>
                     </div>
@@ -207,7 +208,7 @@
                             Proyección de tamaños y assets para decoración de interiores</p>
                     </div>
                     <div class="col-md-5 order-md-1">
-                        <img src="/assets/img/imagen (1).jpg "
+                        <img src="assets/img/imagen (1).jpg "
                             class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
                             width="500" height="500" role="img" aria-label="Placeholder: 500x500"
                             preserveAspectRatio="xMidYMid slice" focusable="false">
@@ -228,7 +229,7 @@
                             exitosamente. Todos podemos ser un funko</p>
                     </div>
                     <div class="col-md-5">
-                        <img src="/assets/img/FunkoRO3.png"
+                        <img src="assets/img/FunkoRO3.png"
                             class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
                             width="500" height="500" role="img" aria-label="Placeholder: 500x500"
                             preserveAspectRatio="xMidYMid slice" focusable="false">
@@ -249,10 +250,16 @@
 
 
 
-    <footer class="container">
-        <p class="float-right"><a href="#">Back to top</a></p>
+    <footer class="container" class="social">
+        <p class="float-center"><a href="#">Back to top</a></p>
         <p>&copy; Kartendeck ~ Un proyecto zetistico &middot; <a href="#">No es privado, es público</a> &middot; <a
                 href="#">No tenemos términos</a></p>
+        <a href="https://github.com"><i class="fab fa-github-square
+                    fa-5x"></i></a>
+        <a href="https://twitter.com"><i class="fab fa-twitter-square
+                    fa-5x"></i></a>
+        <a href="https://www.linkedin.com"><i class="fab fa-linkedin
+                    fa-5x"></i></a>
     </footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
